force-app/main/default/objects/DC_Data_Hall__c/DC_Data_Hall__c.object-meta.xml
<CustomObject>
    <label>Data Hall</label>
    <nameField>
        <label>Data Hall Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Halls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>