force-app/main/default/objects/DC_Data_Hall__c/fields/Cooling_Redundancy_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Cooling_Redundancy_Configuration__c</fullName>
    <description>The redundancy configuration for the cooling infrastructure in this data hall.</description>
    <label>Cooling Redundancy Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N+1</fullName>
            </value>
            <value>
                <fullName>2N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>