force-app/main/default/objects/DC_Data_Hall__c/fields/DC_Floor__c.field-meta.xml
<CustomField>
    <fullName>DC_Floor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>DC Floor</label>
    <referenceTo>DC_Floor__c</referenceTo>
    <relationshipLabel>Data Halls</relationshipLabel>
    <relationshipName>Data_Halls</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>