force-app/main/default/objects/DC_Data_Hall__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Floor</label>
    <referenceTo>DC_Floor__c</referenceTo>
    <relationshipLabel>Data Halls</relationshipLabel>
    <relationshipName>Data_Halls</relationshipName>
    <type>Lookup</type>
</CustomField>