force-app/main/default/objects/DC_Data_Hall__c/listViews/Data_Halls.listView-meta.xml
<ListView>
    <fullName>Data_Halls</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Cooling_Redundancy_Configuration__c</columns>
    <columns>Floor__c</columns>
    <columns>Short_Name__c</columns>
    <filterScope>Mine</filterScope>
    <label>Data Halls</label>
</ListView>